--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             `;
           });
           headerRow.innerHTML += `
-            <th rowspan="2">Keketatan</th>
+            <th rowspan="2">Peluang</th>
           `;
           const tableHeader = document.createElement('thead');
           tableHeader.appendChild(headerRow);
