--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         return ((tampung / peminat) * 100).toFixed(2) + '%';
       };
 
-      const url = 'https://raw.githubusercontent.com/divarvian/daya-tampung/main/result_data.json';
+      const url = 'https://divarvian.github.io/daya-tampung/result_data.json';
 
       const universityDiv = document.getElementById('universityData');
       const searchInput = document.getElementById('searchInput');
